// ============================================================
//  better-auth が自動生成するテーブル
//  （better-auth CLIコマンドで生成されるので手書き不要だが、
//   DBdiagramで関係を可視化するために記述）
// ============================================================

// ユーザー情報
Table user {
    id text [pk]
    name varchar [not null]
    email varchar [unique, not null]
    email_verified boolean [not null]
    image varchar
    username varchar [unique]
    bio text
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

// OAuthアカウント情報
Table account {
    id text [pk]
    account_id text [not null]
    provider_id text [not null]
    user_id text [not null]
    access_token text
    refresh_token text
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

// ログインセッション
Table session {
    id text [pk]
    user_id text [not null]
    token text [unique, not null]
    expires_at timestamp [not null]
    created_at timestamp [not null]
    updated_at timestamp [not null]
}

// ============================================================
//  システム独自のテーブル(自作)
// ============================================================

// レストラン情報
Table restaurants {
    id serial [pk]
    google_place_id varchar [unique, not null]
    name varchar [not null]
    address varchar
    latitude float [not null]
    longitude float [not null]
    created_at timestamp [not null, default: `now()`]
    updated_at timestamp [not null, default: `now()`]
}

// 投稿情報
Table posts {
    id serial [pk]
    user_id text [not null]
    restaurant_id integer [not null]
    image_url varchar [not null]
    comment text
    created_at timestamp [not null, default: `now()`]
    updated_at timestamp [not null, default: `now()`]
}

// ブックマーク情報
Table bookmarks {
    id serial [pk]
    user_id text [not null]
    post_id integer [not null]
    created_at timestamp [not null, default: `now()`]

    indexes {
        (user_id, post_id) [unique, name: 'uq_bookmarks_user_post']
    }
}

// フォロー情報
Enum follow_status {
    pending
    accepted
    rejected
}

// フォロー情報
Table follows {
    follower_id text [not null] // フォローするユーザーのID
    followee_id text [not null] // フォローされるユーザーのID
    status follow_status [not null, default: 'pending']
    created_at timestamp [not null, default: `now()`]
    updated_at timestamp [not null, default: `now()`]

    indexes {
        (follower_id, followee_id) [pk]
    }
}

// ---- リレーション定義 ----
Ref: account.user_id > user.id
Ref: session.user_id > user.id
Ref: posts.user_id > user.id
Ref: posts.restaurant_id > restaurants.id
Ref: bookmarks.user_id > user.id
Ref: bookmarks.post_id > posts.id
Ref: follows.follower_id > user.id
Ref: follows.followee_id > user.id